cherry-pick changes from Java8ForXml